Added 10 more movies and fixed it entirely for the last time

--- a/Other_Webpages/Error_404.html
+++ b/Other_Webpages/Error_404.html
@@ -147,6 +147,7 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="main_home">
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <h1 class="error_heading">404</h1>
         <p class="page_not_found">Hmmm! YOU LOST?<span class="blinking_underscore">_</span></p>
         <a href="../Other_Webpages/home.html" class="home_link">Go Home</a>
