--- a/Other_Webpages/home.html
+++ b/Other_Webpages/home.html
@@ -25,125 +25,170 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="main_home">
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <!-- New On Giveth -->
         <h2 class="category_heading">New On Giveth Movies</h2>
         <div class="line1">
             <!-- Movie one. -->
-            <a href="../Movie_webpages/Movie.html?movie=TheCasagrandesMovie" class="link">
+            <a href="../Movie_webpages/Movie.html?movie=legoMonkieKidEmbraceYourDestiny" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/The_Casagrandes_Movie.jpg" alt="The Casagrandes Movie" class="movie_image">
+                    <img src="../Images/Movie Images/EmbraceYourDestiny.jpg" alt="Lego Monkie Kid Embrace Your Destiny" class="movie_image">
                 </div>
-                <p class="movie_name">The Casagrandes Movie</p>
+                <p class="movie_name">Lego Monkie Kid Embrace Your Destiny</p>
                 <div class="movie_info">
-                    <p class="movie_year">2024</p>
-                    <p class="movie_time">1:21:00</p>
+                    <p class="movie_year">2022</p>
+                    <p class="movie_time">41:08</p>
                 </div>
             </a>
 
             <!-- Movie two. -->
-            <a href="../Movie_webpages/Movie.html?movie=TheGarfieldMovie" class="link">
+            <a href="../Movie_webpages/Movie.html?movie=LegoMonkieKidTheEmperorsWrath" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/The_Garfield_Movie.jpg" alt="The Garfield Movie" class="movie_image">
+                    <img src="../Images/Movie Images/Emperor_Wrath.jpg" alt="Lego Monkie Kid The Emperor's Wrath" class="movie_image">
                 </div>
-                <p class="movie_name">The Garfield Movie</p>
+                <p class="movie_name">Lego Monkie Kid The Emperor's Wrath</p>
                 <div class="movie_info">
-                    <p class="movie_year">2024</p>
-                    <p class="movie_time">1:41:00</p>
+                    <p class="movie_year">2023</p>
+                    <p class="movie_time">43:00</p>
                 </div>
             </a>
 
             <!-- Movie three. -->
-            <a href="../Movie_webpages/Movie.html?movie=MegamindvsTheDoomSyndicate" class="link">
+            <a href="../Movie_webpages/Movie.html?movie=LegoMonkieKidAHeroIsBorn" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Megamind_vs_the_Doom_Syndicate.jpg" alt="Megamind vs The Doom Syndicate" class="movie_image">
+                    <img src="../Images/Movie Images/A_Hero_Is_Born.jpg" alt="Lego Monkie Kid A Hero Is Born" class="movie_image">
                 </div>
-                <p class="movie_name">Megamind vs The Doom Syndicate</p>
+                <p class="movie_name">Lego Monkie Kid A Hero Is Born</p>
                 <div class="movie_info">
-                    <p class="movie_year">2024</p>
-                    <p class="movie_time">1:25:00</p>
+                    <p class="movie_year">2020</p>
+                    <p class="movie_time">45:08</p>
                 </div>
             </a>
             <!-- Movie four. -->
-            <a href="../Movie_webpages/Movie.html?movie=BlackCloverSwordoftheWizardKing" class="link">
+            <a href="../Movie_webpages/Movie.html?movie=LegoMonkieKidRevengeOfTheSpiderQueen" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images//Movie Images/Black_Clover_Sword_of_the_wizard_king.jpg" alt="Black Clover Sword of the Wizard King" class="movie_image">
+                    <img src="../Images//Movie Images/RevengeOfTheSpiderQueen.jpg" alt="Lego Monkie Kid Revenge Of The Spider Queen" class="movie_image">
                 </div>
-                <p class="movie_name">Black Clover Sword of the Wizard King</p>
+                <p class="movie_name">Lego Monkie Kid Revenge Of The Spider Queen</p>
                 <div class="movie_info">
-                    <p class="movie_year">2023</p>
-                    <p class="movie_time">1:50:00</p>
+                    <p class="movie_year">2021</p>
+                    <p class="movie_time">43:08</p>
                 </div>
             </a>
             
             <!-- Movie five. -->
-            <a href="../Movie_webpages/Movie.html?movie=OrionandtheDark" class="link">
+            <a href="../Movie_webpages/Movie.html?movie=Luck" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Orion_and_the_dark.jpg" alt="Orion and the Dark" class="movie_image">
+                    <img src="../Images/Movie Images/Luck.jpg" alt="Luck" class="movie_image">
                 </div>
-                <p class="movie_name">Orion and the Dark</p>
+                <p class="movie_name">Luck</p>
                 <div class="movie_info">
-                    <p class="movie_year">2024</p>
-                    <p class="movie_time">1:33:00</p>
+                    <p class="movie_year">2022</p>
+                    <p class="movie_time">1:45:24</p>
                 </div>
             </a>
 
             <!-- Movie six. -->
-            <a href="../Movie_webpages/Movie.html?movie=KungFuPanda4" class="link">
+            <a href="../Movie_webpages/Movie.html?movie=Migration" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Kung_Fu_Panda_4.jpg" alt="Kung Fu Panda 4" class="movie_image">
+                    <img src="../Images/Movie Images/Migration.jpg" alt="Migration" class="movie_image">
                 </div>
-                <p class="movie_name">Kung Fu Panda 4</p>
+                <p class="movie_name">Migration</p>
                 <div class="movie_info">
                     <p class="movie_year">2024</p>
-                    <p class="movie_time">1:34:00</p>
-                </div>
-            </a>
-
-            <!-- Movie seven. -->
-            <a href="../Movie_webpages/Movie.html?movie=TheWildRobot" class="link">
-                <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Wild_robot.jpg" alt="The Wild Robot" class="movie_image">
-                </div>
-                <p class="movie_name">The Wild Robot</p>
-                <div class="movie_info">
-                    <p class="movie_year">2024</p>
-                    <p class="movie_time">1:42:00</p>
-                </div>
-            </a>
-
-            <!-- Movie eight. -->
-            <a href="../Movie_webpages/Movie.html?movie=RiseOfTheTeenageMutantNinjaTurtlesTheMovie" class="link">
-                <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Rise_of_teenage_mutant_ninja_turtles.jpg" alt="RiseOfTheTeenageMutantNinjaTurtlesTheMovie" class="movie_image">
-                </div>
-                <p class="movie_name">Rise Of The Teenage Mutant Ninja Turtles The Movie</p>
-                <div class="movie_info">
-                    <p class="movie_year">2022</p>
                     <p class="movie_time">1:22:00</p>
                 </div>
             </a>
 
-            <!-- Movie nine. -->
-            <a href="../Movie_webpages/Movie.html?movie=WoodyWoodPeckerGoesToCamp" class="link">
+            <!-- Movie seven. -->
+            <a href="../Movie_webpages/Movie.html?movie=Mummies" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Woody_Wood_Pecker_Goes_To_Camp.jpg" alt="Woody Wood Pecker Goes To Camp" class="movie_image">
+                    <img src="../Images/Movie Images/Mummies.jpg" alt="Mummies" class="movie_image">
                 </div>
-                <p class="movie_name">Woody Wood Pecker Goes To Camp</p>
+                <p class="movie_name">Mummies</p>
                 <div class="movie_info">
-                    <p class="movie_year">2024</p>
-                    <p class="movie_time">1:39:00</p>
+                    <p class="movie_year">2023</p>
+                    <p class="movie_time">1:28:24</p>
+                </div>
+            </a>
+
+            <!-- Movie eight. -->
+            <a href="../Movie_webpages/Movie.html?movie=Nimona" class="link">
+                <div class="movie_image_holder">
+                    <img src="../Images/Movie Images/Nimona.jpg" alt="Nimona" class="movie_image">
+                </div>
+                <p class="movie_name">Nimona</p>
+                <div class="movie_info">
+                    <p class="movie_year">2023</p>
+                    <p class="movie_time">1:42:46</p>
+                </div>
+            </a>
+
+            <!-- Movie nine. -->
+            <a href="../Movie_webpages/Movie.html?movie=PokemonDetectivePikachu" class="link">
+                <div class="movie_image_holder">
+                    <img src="../Images/Movie Images/PokemonDetectivePikachu.jpg" alt="Pokemon Detective Pikachu" class="movie_image">
+                </div>
+                <p class="movie_name">Pokemon Detective Pikachu</p>
+                <div class="movie_info">
+                    <p class="movie_year">2019</p>
+                    <p class="movie_time">1:44:29</p>
                 </div>
             </a>
 
             <!-- Movie 10. -->
-            <a href="../Movie_webpages/Movie.html?movie=NextGen" class="link">
+            <a href="../Movie_webpages/Movie.html?movie=SpiderManAcrossTheSpiderVerse" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Next Gen.jpg" alt="Next Gen" class="movie_image">
+                    <img src="../Images/Movie Images/SpiderManAcrossTheSpiderVerse.jpg" alt="Spider Man Across The Spider Verse" class="movie_image">
                 </div>
-                <p class="movie_name">Next Gen</p>
+                <p class="movie_name">Spider Man Across The Spider Verse</p>
                 <div class="movie_info">
-                    <p class="movie_year">2018</p>
-                    <p class="movie_time">1:47:00</p>
+                    <p class="movie_year">2023</p>
+                    <p class="movie_time">2:20:05</p>
+                </div>
+            </a>
+
+            <a href="../Movie_webpages/Movie.html?movie=TheBadGuys" class="link">
+                <div class="movie_image_holder">
+                    <img src="../Images/Movie Images/TheBadGuys.jpg" alt="The Bad Guys" class="movie_image">
+                </div>
+                <p class="movie_name">The Bad Guys</p>
+                <div class="movie_info">
+                    <p class="movie_year">2022</p>
+                    <p class="movie_time">1:40:07</p>
+                </div>
+            </a>
+
+            <a href="../Movie_webpages/Movie.html?movie=TheMonkeyKing" class="link">
+                <div class="movie_image_holder">
+                    <img src="../Images/Movie Images/TheMonkeyKing.jpg" alt="The Monkey King" class="movie_image">
+                </div>
+                <p class="movie_name">The Monkey King</p>
+                <div class="movie_info">
+                    <p class="movie_year">2023</p>
+                    <p class="movie_time">1:36:30</p>
+                </div>
+            </a>
+
+            <a href="../Movie_webpages/Movie.html?movie=TheSuperMarioBrosMovie" class="link">
+                <div class="movie_image_holder">
+                    <img src="../Images/Movie Images/TheSuperMarioBrosMovie.jpg" alt="The Super Mario Bros Movie" class="movie_image">
+                </div>
+                <p class="movie_name">The Super Mario Bros Movie</p>
+                <div class="movie_info">
+                    <p class="movie_year">2023</p>
+                    <p class="movie_time">1:32:25</p>
+                </div>
+            </a>
+
+            <a href="../Movie_webpages/Movie.html?movie=Wish" class="link">
+                <div class="movie_image_holder">
+                    <img src="../Images/Movie Images/Wish.jpg" alt="Wish" class="movie_image">
+                </div>
+                <p class="movie_name">Wish</p>
+                <div class="movie_info">
+                    <p class="movie_year">2023</p>
+                    <p class="movie_time">1:34:56</p>
                 </div>
             </a>
         </div>
