--- a/Other_Webpages/watch_serie.html
+++ b/Other_Webpages/watch_serie.html
@@ -26,6 +26,7 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header> 
     <main class="serie_main">
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <!-- Responsive Iframe -->
         <iframe class="serie_frame" id="serie_iframe"  allowfullscreen></iframe> 
         <div id="Ad_State">
