--- a/Other_Webpages/Contact.html
+++ b/Other_Webpages/Contact.html
@@ -27,6 +27,7 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="movie_contact">
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <h1 class="contact-heading">CONTACT US</h1>
         <form id="contact-form" method="POST">
             <div class="form_divisions">
