--- a/Other_Webpages/results.html
+++ b/Other_Webpages/results.html
@@ -72,6 +72,7 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="main_home">
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <h1>Results</h1>
         <div id="results-container" class="line1">
             <p id="failed" style="text-align: center; color: #EB5E28;"></p>
