--- a/Other_Webpages/watch_movie.html
+++ b/Other_Webpages/watch_movie.html
@@ -26,6 +26,7 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="movie_main">
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <!-- Responsive Iframe -->
         <iframe class="movie_frame" id="movie_iframe"  allowfullscreen></iframe>
         
