--- a/Serie_webpages/Serie.html
+++ b/Serie_webpages/Serie.html
@@ -28,7 +28,7 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header> 
     <main class="serie_main">
-        <!-- <script type="module" src="../Scripts/serie.js"></script> -->
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <!-- Responsive Iframe -->
         <iframe class="serie_frame" id="serie_iframe"  allowfullscreen></iframe> 
         <div id="Ad_State">
