--- a/Serie_webpages/SerieList.html
+++ b/Serie_webpages/SerieList.html
@@ -78,6 +78,7 @@
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="main_home">
+        <script src="../Scripts/localStorageCheckerScript.js"></script>
         <div class="line1">
             <!-- Serie one. -->
             <a href="../Serie_webpages/Serie.html?serie=StevenUniverse" class="link">
