--- a/index.html
+++ b/index.html
@@ -9,37 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
     <title>Giveth Movies - Watch and Downlod Movies...</title>
+    <script src="./Scripts/blocker.js"></script>
     <script src="./Scripts/search.js" ></script>
-    <script>
-
-        // Function to redirect back to the original page if the URL is stored
-
-        function redirectToOriginalPage() {
-
-            const originalPageUrl = localStorage.getItem('currentPageUrl');
-
-
-            if (originalPageUrl) {
-
-                // Redirect back to the original page
-
-                window.location.href = originalPageUrl;
-
-
-                // Optionally, clear the stored URL to prevent future redirects
-
-                localStorage.removeItem('currentPageUrl');
-
-            }
-
-        }
-
-
-        // Call the function when the page loads
-
-        window.onload = redirectToOriginalPage;
-
-    </script>
     <style>
         .main_home
         {
