Fixed Migration movie image that was not loading for some reason

--- a/Movie_webpages/MovieList.html
+++ b/Movie_webpages/MovieList.html
@@ -137,7 +137,7 @@
 
             <a href="../Movie_webpages/Movie.html?movie=Migration" class="link">
                 <div class="movie_image_holder">
-                    <img src="../Images/Movie Images/Migration.jpg" alt="Migration" class="movie_image">
+                    <img src="../Images//Movie Images/Migration_Birds.jpg" alt="Migration" class="movie_image">
                 </div>
                 <p class="movie_name">Migration</p>
                 <div class="movie_info">
